--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-ng-app="offy-app">
 <head>
-    <!-- <base href="/"> -->
+    <base href="/">
 
     <meta charset="utf-8" />
     <title>Offy</title>
@@ -38,7 +38,7 @@
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/homeCtrl.js"></script>
     <script src="js/controllers/offerCtrl.js"></script>
-    <script src="js/controllers/commentsCtrl.js"></script>   
+    <script src="js/controllers/commentsCtrl.js"></script>
 
 </head>
     <body>
