--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-ng-app="offy-app">
 <head>
-    <base href="/">
+    <!-- <base href="/"> -->
 
     <meta charset="utf-8" />
     <title>Offy</title>
@@ -31,7 +31,7 @@
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-ui-router.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/routes.js"></script>
+    <script src="js/routes.js?v-2"></script>
 
     <!-- CONTROLLERS -->
     <script src="js/controllers/masterCtrl.js"></script>
