--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-ui-router.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/routes.js?v-2"></script>
+    <script src="js/routes.js"></script>
 
     <!-- CONTROLLERS -->
     <script src="js/controllers/masterCtrl.js"></script>
