--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 
-    <link rel="stylesheet" href="assets/css/style.css?v=2">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-ui-router.min.js"></script>
@@ -35,10 +35,16 @@
 
     <!-- CONTROLLERS -->
     <script src="js/controllers/masterCtrl.js"></script>
-    <script src="js/controllers/loginCtrl.js"></script>
+    <!-- LOGIN -->
+    <script src="js/controllers/loginEmailCtrl.js"></script>
+    <script src="js/controllers/loginCreateAccountCtrl.js"></script>
+    <!--/LOGIN -->
     <script src="js/controllers/homeCtrl.js"></script>
     <script src="js/controllers/offerCtrl.js"></script>
     <script src="js/controllers/commentsCtrl.js"></script>
+    <script src="js/controllers/favoritesCtrl.js"></script>
+
+    <script src="js/controllers/alertsCtrl.js"></script>
 
 </head>
     <body>
