--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
     <!-- SERVICES -->
     <script src="js/services/offerService.js"></script>
+    <script src="js/services/loginService.js"></script>
 
 </head>
     <body>
