--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <!-- SERVICES -->
     <script src="js/services/offerService.js"></script>
     <script src="js/services/loginService.js"></script>
+    <script src="js/services/userService.js"></script>
 
 </head>
     <body>
