--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src="js/services/offerService.js"></script>
     <script src="js/services/loginService.js"></script>
     <script src="js/services/userService.js"></script>
+    <script src="js/services/geoLocationService.js"></script>
 
 </head>
     <body>
