--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-br" data-ng-app="offy-app" manifest="offline.manifest">
-<!-- <html lang="pt-br" data-ng-app="offy-app"> -->
+<!-- <html lang="pt-br" data-ng-app="offy-app" manifest="offline.manifest"> -->
+<html lang="pt-br" data-ng-app="offy-app">
 <head>
-    <!-- <base href="/"> -->
+    <base href="/">
 
     <meta charset="utf-8" />
     <title>Offy</title>
