steps para cadsatro

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             // navigator.serviceWorker.register('service-worker.js')
         }
     </script>
-
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-ui-router.min.js"></script>
     <script src="js/app.js"></script>
@@ -50,6 +49,7 @@
     <script src="js/controllers/commentsCtrl.js"></script>
     <script src="js/controllers/favoritesCtrl.js"></script>
     <script src="js/controllers/publishCtrl.js"></script>
+    <script src="js/controllers/publishStepOneCtrl.js"></script>
     <script src="js/controllers/profileCtrl.js"></script>
 
     <script src="js/controllers/alertsCtrl.js"></script>
@@ -59,6 +59,9 @@
     <script src="js/services/loginService.js"></script>
     <script src="js/services/userService.js"></script>
     <script src="js/services/geoLocationService.js"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDG4Z0OkIu20yfKBTbmAF0Sou2bqHmkv48&libraries=places"
+    async defer></script>
 
 </head>
     <body>
