--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 </header>
 
                 <form id="myForm" class="card-body" onsubmit="taskController.addTask(event)">
-                    <input type="text" id="taskId">
+                    <input type="hidden" id="taskId">
                     <div class="fieldControl fieldControl--icon">
                         <svg class="icon icon-check">
                             <use xlink:href="#icon-check"></use>
