--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
     <link rel=”preload”>
 
-    https://www.w3schools.com/js/tryit.asp?filename=tryjs_validation_check
+    quando clicar no list task e estiver FECHADO, abre e manda o campos
 -->
 <!DOCTYPE html>
 <html>
@@ -229,7 +229,7 @@
 
             <section class="card">
                 <header class="card-header">
-                    <button id="js-addTask" class="btn btn-blue">
+                    <button type="button" onclick="taskController.openNewTask()" class="btn btn-blue">
                         Add Task
                     </button>
 
@@ -293,25 +293,26 @@
 
                 </header>
 
-                <form id="myForm" class="card-body" onsubmit="taskController.addTask(event)">
+                <section class="card-body">
                     <input type="hidden" id="taskId">
+
                     <div class="fieldControl fieldControl--icon">
                         <svg class="icon icon-check">
                             <use xlink:href="#icon-check"></use>
                         </svg>
-                        <input type="text" id="taskTitle" class="fieldControl-field" placeholder="New Task" onblur="taskController.triggerTask()" required>
+                        <input  type="text" id="taskTitle" class="fieldControl-field"
+                                placeholder="New Task" onblur=""
+                                onkeypress="taskController.keyCodeEnter(event)"
+                                onClick="this.select();" required>
                     </div>
 
                     <div class="fieldControl">
                         <textarea id="description" cols="30" rows="3" placeholder="Description"
                                   class="fieldControl-field fieldControl-field--description"
-                                  onblur="taskController.triggerTask()" required></textarea>
+                                  onClick="this.select();"
+                                  onblur="taskController.verifyIs()" onkeypress="taskController.keyCodeEnter(event)"></textarea>
                     </div>
-
-                    <button id="btnSend" type="submit" class="u-hide">
-                        Enviar
-                    </button>
-                </form>
+                </section>
 
                 <footer class="card-footer">
                     <img src="assets/img/user-marco-luque.jpg" alt="Usuário - Marco Luque" class="card-footer-imgUser">
@@ -339,12 +340,6 @@
         <!-- JOGAR NO INDEX -->
         <script>
             let taskController = new TaskController();
-
-            var cardAdd = document.querySelector(".cardContainer");
-
-            document.querySelector("#js-addTask").onclick = function() {
-                cardAdd.classList.add("is-cardAdd-show");
-            }
 
             if('serviceWorker' in navigator ){
                 // navigator.serviceWorker.register('sw.js')
